--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,2 @@
-[package]
-name = "eld"
-version = "0.1.0"
-authors = ["Piyush Jaipuriyar <pjaipuriyar@paypal.com>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[workspace]
+members = ["crates/*"]
